Add a test to ensure that BSlots are always cache-line sized.
Also change the padding in BSlot to reduce the object size from 160 bytes, to 64 bytes.
The effects of this will be benchmarked later.